remove image shadow, fix width on mobile, allow linebreaks in description, preview old image on edit

--- a/resources/public/style.css
+++ b/resources/public/style.css
@@ -146,7 +146,6 @@ section h2, section h1 {
     max-height: 400px;
     max-width: 100%;
     border-radius: 4px;
-    box-shadow: inset 0 0 10px #000000;
 }
 
 section h4 {
@@ -292,6 +291,10 @@ input[type="submit"], input[type="text"], button {
     display: block;
 }
 
+#eventDescription{
+    white-space: pre-wrap;
+}
+
 #flexcontainer {
     display: flex;
     justify-content: space-around;
@@ -319,7 +322,7 @@ input[type="submit"], input[type="text"], button {
 
 
 #createEvent input {
-    min-width: 320px;
+    min-width: 300px;
     flex-grow: 1;
     min-height: 21px;
 }
@@ -471,7 +474,7 @@ input.editButton:hover {
 #activities > div {
     flex: 1;
     margin: 10px;
-    min-width: 350px;
+    min-width: 300px;
 }
 
 footer {
@@ -558,6 +561,10 @@ address {
 @media only screen and (max-width: 600px) {
     header img {
 
+    }
+
+    nav a{
+        flex-basis: 100%;
     }
 
     section {
